--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
     <div class="container">
         <main>
             <div class="container-img">
-                <img class="mb-24" src="https://fakeimg.pl/96x96/" alt="96x96 image">
-                <img src="https://fakeimg.pl/96x96/" alt="96x96 image"></div>
+                <img src="https://fakeimg.pl/96x96/" alt="96X96 img">
+                <img class="mt-24" src="https://fakeimg.pl/96x96/" alt="96X96 img">
+            </div>
             <div class="container-content">
                 <div class="content-item">
-                    <h1>Title Lorem.. <span>font-size:20px; line-height:1.2</span></h1>
-                    <p class="font-size14">font-size:16px; line-height:1.5 Lorem ipsum<br>dolor sit amet, consectetur adipisicing elit.<br>Cum fugit, repellat, commodi culpa</p>
+                    <h1>Title Lorem..</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugit, repellat, commodi culpa</p>
                 </div>
                 <div class="content-item">
-                    <h1>Title Lorem..</h1>
-                    <p class="font-size13">Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. Cum fugit, repellat, commodi<br>culpa consequuntur, sit velit reiciendis..</p>
+                    <h2>Title Lorem..</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugit, repellat, commodi culpa</p>
                 </div>
             </div>
-            <img class="img-width216" src="https://fakeimg.pl/216x216/" alt="216 x 216 images">
+            <img src="https://fakeimg.pl/216x216/" alt="216X216 img">
         </main>
         <footer class="mt-24">
             <p>表尾文字 font-size:16px; line-height:1.5</p>
         </footer>
     </div>
+    
 </body>
 </html>
